syntax = "proto3";
package poh;

import "proto/pack.proto";

option go_package = "/proto";

message PohHashData {
    bytes PreHash = 1;
    bytes Count = 2;
    repeated bytes  PackHashes = 3;
}

message PohEntry {
    int64 NumHashes = 1;
    bytes Hash = 2;
    bytes LastHashCount = 3;
    pack.Packs Packs = 4;
}