syntax = "proto3";
package smartContractExecuteRequest;

option go_package = "/proto";

enum EXECUTE_TYPE {
    CALL = 0;
    DEPLOY = 1;
}

message SmartContractExecuteRequest {
    bytes TransactionHash = 1;
    bytes From = 2;
    bytes To = 3;
    bytes LastHash = 4;
    bytes Amount = 5;
    bytes Input = 6;
    EXECUTE_TYPE Type = 7;
    string StorageHost = 8;
}

message SmartContractExecuteRequests {
    repeated SmartContractExecuteRequest Requests = 1;
}
